--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset='utf-8'>
       <title>Calculator</title>
-      <link rel='stylesheet' href='style.css'>
+      <link rel='stylesheet' href='./dist/style.css'>
   </head>
 
   <body>
@@ -61,6 +61,6 @@
       </div>
     </div>
 
-        <script src='main.js'></script>
+        <script src='.dist/main.js'></script>
     </body>
 </html>
