--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
       </div>
     </div>
 
-        <script src='.dist/main.js'></script>
+        <script src='./dist/main.js'></script>
     </body>
 </html>
